# shop-online-go

./: .gitignore  API-Doc.md  BUILD  LICENSE  README.md  WORKSPACE  config-test.yaml  config.yaml  coverage.html  coverage.out  debug.sh  deps.bzl  document.md  go.mod  go.sum  initData.go  initData_test.go  main.go  main_test.go  restart.sh
.bmad-core/: core-config.yaml  install-manifest.yaml  user-guide.md  working-in-the-brownfield.md
.bmad-core/agents/: analyst.md  architect.md  bmad-master.md  bmad-orchestrator.md  dev.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.bmad-core/checklists/: architect-checklist-zh.txt  architect-checklist.md  change-checklist-zh.txt  change-checklist.md  pm-checklist-zh.txt  pm-checklist.md  po-master-checklist-zh.txt  po-master-checklist.md  story-dod-checklist-zh.txt  story-dod-checklist.md  story-draft-checklist-zh.txt  story-draft-checklist.md
.bmad-core/data/: bmad-kb.md  brainstorming-techniques.md  elicitation-methods.md  technical-preferences.md  technical-preferences.mdc
.bmad-core/tasks/: advanced-elicitation.md  brownfield-analysis.md  brownfield-create-epic.md  brownfield-create-story.md  correct-course.md  create-brownfield-story.md  create-deep-research-prompt.md  create-doc.md  create-next-story.md  document-project.md  execute-checklist.md  facilitate-brainstorming-session.md  generate-ai-frontend-prompt.md  index-docs.md  kb-mode-interaction.md  review-story.md  shard-doc.md  validate-next-story.md
.bmad-core/utils/: bmad-doc-template.md  workflow-management.md
.cursor/rules/: analyst.mdc  architect.mdc  bmad-master.mdc  bmad-orchestrator.mdc  dev.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc  ux-expert.mdc
.gemini/: backend-expert.mdc  codequality.mdc  go_spec.mdc  spec_for_biz_workflow_doc.md
.gemini/bmad-method/: GEMINI.md
E2Etest/: E2E-TEST-README.md  bookstore-address-api-tests.postman_collection.json  create-test-user.sql  login-test-user.sh  start-test-server.sh
app/ad/banner/: BUILD.bazel  BannerService.go  bannarHandler.go  banner.go  bannerHandler_test.go  bannerVMBuilder.go
app/addresses/: BUILD.bazel  address.go  addressHandler.go  addressHandler_test.go  addressService.go  addressService_test.go  address_test.go  test.db
app/banner/: BUILD.bazel  BannerRepoDB.go  BannerRepoDB_test.go  BannerService.go  BannerService_test.go  bannarHandler.go  banner.go  bannerHandler_test.go  bannerVMBuilder.go
app/configs/: BUILD.bazel  DBConn.go  cfg.go  cfg_test.go  db.go  test.db
app/controllers/: bannars.go  books.go  catalogue.go  categorys.go  goods.go  order.go  shopingcart.go  shopingcart_test.go  user.go
app/goods/: BUILD.bazel  book.go  bookHandler.go  bookHandler_test.go  catalogueHandler.go  category.go  categoryHandler.go  categoryHandler_test.go  categoryRepo.go  categoryRepoDB.go  categoryRepoDB_test.go  categoryRepo_test.go  goodsHandler.go  goodsHandler_test.go  goodsItem.go  goodsRepo.go  goodsRepoDB.go  goodsRepo_test.go  goodsService.go  goodsService_test.go  sku.go  skuRepo.go  skuRepoDB.go  skuRepoDB_test.go  skuRepoMem.go  test.db
app/migrations/: migrations.go
app/models/: banner.go  category.go  goodsItem.go  responsable.go
app/order/: BUILD.bazel  orderHandler.go
app/repository/: cartRepo.go  cartRepo_test.go  cart_test.go  carts_test.go  goodsRepo.go
app/routers/: BUILD.bazel  routers.go
app/security/: BUILD.bazel  auth.go  auth_test.go  security.go  token_extractor.go
app/shoppingcart/: BUILD.bazel  cartDB.go  cartHandler.go  cartHandler_test.go  cartInfo.go  cartModel.go  cartRepo.go  cartRepoDB.go  cartRepoDB_test.go  cartRepoMem.go  cartRepoMem_test.go  cartRepo_test.go  cartService.go  cartService_test.go  cartViewModel.go  test.db  userCartItemBuilder.go
app/testDemo.go/: demo_test.go
app/testutils/: BUILD.bazel  testSuite.go  utilsForTest.go
app/user/: BUILD.bazel  address.go  addressHandler.go  addressHandler_test.go  addressService.go  addressService_test.go  address_test.go  test.db  useService_test.go  user.go  userHandler.go  userHandler_test.go  userRepo.go  userRepoDB.go  userRepoDB_test.go  userRepo_test.go  userService.go  userService_test.go  userVM.go  userVM_test.go  user_test.go
app/utils/: BUILD.bazel  cfgForTest.go  context.go  generator.go  generator_test.go  test.db  utilsForTest.go  viladitor.go
dbscripts/: 01_create_table_books.down.sql  01_create_table_books.up.sql  02_init_data_to_books.down.sql  02_init_data_to_books.up.sql  03_create_table_categorys.up.sql  04_insert_data_to_categorys.down.sql  04_insert_data_to_categorys.up.sql  05_create_table_goods.down.sql  05_create_table_goods.up.sql  06_insert_data_to_goods.down.sql  06_insert_data_to_goods.up.sql  07_initiate_table_users.down.sql  07_initiate_table_users.up.sql  08_initiate_table_SKUs.down.sql  08_initiate_table_SKus.up.sql  09_initiate_table_SKu_pics.Down.sql  09_initiate_table_SKu_pics.up.sql  10_initiate_table_cart_item.up.sql  10_initiate_table_cart_item_.Down.sql  10_initiate_table_cart_item_.up.sql  11_create_table_addresses.down.sql  11_create_table_addresses.up.sql  12_initiate_table_banners.up.sql  1_create_table_books.up.sql  3_create_table_categorys.up.sql  4_insert_data_to_categorys.up.sql  5_create_table_goods.up.sql  6_insert_data_to_goods.up.sql  7_initiate_table_users.up.sql  8_initiate_table_SKus.up.sql  9_initiate_table_SKu_pics.up.sql
docs/: address-refactoring-summary.md  architecture.md  auth-middleware-summary.md  auth-middleware-usage.md  prd.md  project_api.md  project_biz_workflow.md  project_domain_model.md  project_external_dependency.md  project_intro.md  story-13-api-usage-guide.md  story-13-implementation-summary.md
docs/architecture/: clean-code.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  go-coding-standards.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
initData/: SKUs.json  banners.json
(+38 files in other folders)
