load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "configs",
    srcs = ["cfg.go"],
    importpath = "github.com/example/project/app/configs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//database/mysql:go_default_library",
        "@com_github_golang_migrate_migrate_v4//source/file:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_gorm_driver_mysql//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)

go_test(
    name = "configs_test",
    srcs = ["cfg_test.go"],
    embed = [":configs"],
    deps = ["@com_github_stretchr_testify//suite:go_default_library"],
    data =[
        ":test_data",
    ]
)

filegroup(
    name = "test_data",
    data =[
        "//:db_files",
        "//:cfgfile_for_test",
        "//:pic_files",
    ],
)