load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routers",
    srcs = ["routers.go"],
    importpath = "github.com/example/project/app/routers",
    visibility = ["//visibility:public"],
    deps = [
        "//app/goods",
        "//app/banner",        
        "//app/shoppingcart",        
        "//app/order",        
        "//app/security",        
        "//app/user",        
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
