load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "security",
    srcs = ["security.go"],
    importpath = "github.com/example/project/app/security",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_afocus_captcha//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
